WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82452
[GTK] [Stable] --disable geolocation broken after recent merges
https://bugs.webkit.org/show_bug.cgi?id=82452
Summary
[GTK] [Stable] --disable geolocation broken after recent merges
Kalev Lember
Reported
2012-03-28 05:37:52 PDT
I am getting the following error when building webkitgtk 1.8.0 with --with-gtk=2.0 --disable-geolocation: CXX Source/WebKit/gtk/WebCoreSupport/libwebkitgtk_1_0_la-ChromeClientGtk.lo ../Source/WebKit/gtk/WebCoreSupport/ChromeClientGtk.cpp: In member function ‘virtual void WebKit::ChromeClient::requestGeolocationPermissionForFrame(WebCore::Frame*, WebCore::Geolocation*)’: ../Source/WebKit/gtk/WebCoreSupport/ChromeClientGtk.cpp:864:131: error: ‘webkit_geolocation_policy_decision_new’ was not declared in this scope make[1]: *** [Source/WebKit/gtk/WebCoreSupport/libwebkitgtk_1_0_la-ChromeClientGtk.lo] Error 1 This used to work fine up until the recent geolocation build changes that were merged from trunk:
http://trac.webkit.org/changeset/112118/releases/WebKitGTK/webkit-1.8
http://trac.webkit.org/changeset/112120/releases/WebKitGTK/webkit-1.8
I would suspect that it's missing one more merge from trunk to make it all work again (haven't actually tested the theory):
http://trac.webkit.org/changeset/110595
Attachments
Patch
(14.27 KB, patch)
2012-03-31 12:28 PDT
,
Martin Robinson
buildbot
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ionut Biru
Comment 1
2012-03-29 03:43:57 PDT
In my opinion a new release should be made ASAP. I don't really get it on why the merge was done so late, two days before the release. Is a very risky merge and now everything is broken.
Zan Dobersek
Comment 2
2012-03-29 04:01:24 PDT
(In reply to
comment #1
)
> In my opinion a new release should be made ASAP. > > I don't really get it on why the merge was done so late, two days before the release. Is a very risky merge and now everything is broken.
Be assured, it was even more broken before.
Martin Robinson
Comment 3
2012-03-31 12:28:15 PDT
Created
attachment 134972
[details]
Patch
WebKit Review Bot
Comment 4
2012-03-31 12:33:03 PDT
Attachment 134972
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/plat..." exit_code: 1 Source/WebCore/platform/gtk/RenderThemeGtk3.cpp:231: Use 0 instead of NULL. [readability/null] [5] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Martin Robinson
Comment 5
2012-03-31 12:40:16 PDT
Comment on
attachment 134972
[details]
Patch Sorry. Wrong bug.
Build Bot
Comment 6
2012-03-31 12:50:15 PDT
Comment on
attachment 134972
[details]
Patch
Attachment 134972
[details]
did not pass win-ews (win): Output:
http://queues.webkit.org/results/12247911
Martin Robinson
Comment 7
2012-03-31 12:59:27 PDT
Committed
r112800
: <
http://trac.webkit.org/changeset/112800
>
Martin Robinson
Comment 8
2012-03-31 13:00:39 PDT
(In reply to
comment #7
)
> Committed
r112800
: <
http://trac.webkit.org/changeset/112800
>
I chose to use a one off build fix, because merging the mentioned commit would have been quite invasive. This fix should be in 1.8.1. Thanks for reporting!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug