[GTK] [Stable] --disable geolocation broken after recent merges https://bugs.webkit.org/show_bug.cgi?id=82452

No review, as this is just a build fix.

Fix the geolocation build.

* webkit/webkitgeolocationpolicydecision.cpp:
(webkit_geolocation_policy_decision_new): When gelocation is off, just return null.
* webkit/webkitgeolocationpolicydecisionprivate.h: Activate webkit_geolocation_policy_decision_new
for non-Geolocation builds.

Canonical link: https://commits.webkit.org/96014.104@webkitgtk/1.8
git-svn-id: https://svn.webkit.org/repository/webkit/releases/WebKitGTK/webkit-1.8@112800 268f45cc-cd09-0410-ab3c-d52691b4dbfc